--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <!-- displays site properly based on user's device -->
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
   <title>Frontend Mentor | Ping coming soon page</title>
-  <link rel="stylesheet" href="./sass/style.css">
+  <link rel="stylesheet" href="./style.css">
   <script defer src="https://kit.fontawesome.com/8eb39b5a36.js" crossorigin="anonymous"></script>
   <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
 <!-- <style>
@@ -57,6 +57,6 @@
     </p>
   </footer> -->
 
-  <script src="script.js"></script>
+  <script src="./script.js"></script>
 </body>
 </html>
