--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   <div class="card">
 
     <section class="logo">
-      <img src="./logo.svg" alt="logo-img">
+      <img src="logo.svg" alt="logo-img">
       <p class="destaque">We are launching <span>soon!</span></p> 
       <p class="sub">Subscribe and get notified</p> 
     </section>
@@ -35,7 +35,7 @@
 
 
    <section class="contact">
-     <img src="./illustration-dashboard.png" alt="dashboard-img" class="dash">
+     <img src="illustration-dashboard.png" alt="dashboard-img" class="dash">
     <nav class="social-medias">
       <i class="fa-brands fa-facebook-f"></i>
       <i class="fa-brands fa-twitter"></i>
