--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <!-- displays site properly based on user's device -->
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
   <title>Frontend Mentor | Ping coming soon page</title>
-  <link rel="stylesheet" href="./style.css">
+  <link rel="stylesheet" href="./style.scss">
   <script defer src="https://kit.fontawesome.com/8eb39b5a36.js" crossorigin="anonymous"></script>
   <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
 <!-- <style>
@@ -19,7 +19,7 @@
   <div class="card">
 
     <section class="logo">
-      <img src="logo.svg" alt="logo-img">
+      <img src="./logo.svg" alt="logo-img">
       <p class="destaque">We are launching <span>soon!</span></p> 
       <p class="sub">Subscribe and get notified</p> 
     </section>
@@ -35,7 +35,7 @@
 
 
    <section class="contact">
-     <img src="illustration-dashboard.png" alt="dashboard-img" class="dash">
+     <img src="./illustration-dashboard.png" alt="dashboard-img" class="dash">
     <nav class="social-medias">
       <i class="fa-brands fa-facebook-f"></i>
       <i class="fa-brands fa-twitter"></i>
