--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
   <!-- displays site properly based on user's device -->
-  <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="./favicon-32x32.png">
   <title>Frontend Mentor | Ping coming soon page</title>
   <link rel="stylesheet" href="/style.scss">
   <script defer src="https://kit.fontawesome.com/8eb39b5a36.js" crossorigin="anonymous"></script>
